# geined

./: 111018_bancos.py  AUTHORS  Geined.e4p  Geined.geany  Login.php  Makefile.am  README.md  Salida.html  TODO  alu.py  alu_inscribir.py  alu_inscripcion1.py  alu_inscripcion2.py  alu_inscripcion3.py  alu_suc.py  auth.inc  ayuda.html  balcom.py  bc_suc.php  biecam.py  bol.py  bolcon.php  bolcuo.php  bollib.php  bolmat.php  bolmod.php  bolrec.php  bugs.py  buscar.sh  caja.php  caja_111018.php  caja_111031.php  caja_curso.py  caja_ver.php  calc_ant_ret.py  calc_sueldos.py  calccon.py  ccl.py  ccl_ver.php  cem.php  (+104 more)
conf/: README.txt  geined.conf  geined.conf~  log.inc  sample.conf  sample.conf~  sample.inc
css/: android.css  boleta.css  boleta2.css  geined.css  geined2.css  geined3.css  geinedpy.css  geinedrb.css  geirub.css  greyscale.css  recibo.css
img/: .directory
js/: calendar.php  fecha.js
sql/: Alianza.sql
src/: Makefile.am  geined.py
txt/: pie_bol.txt
